# apollo-agents

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENT.md  CHANGELOG.md  CLAUDE.md  PAPER.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  main.py  make_logo.py  pyproject.toml  video_test.py
.github/workflows/: ci.yml
agent/: live_dj.py  live_engine.py  phase_lock.py  run.py  tools.py  transition_styles.py
agent/generative/: __init__.py  arc.py  bench.py  clock.py  controls.py  dispatch.py  genres.py  harmony.py  interpreter.py  mind.py  motif.py  patches.py  quality.py  quality_references.json  render_audio.py  scales.py  spec.py  state.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: E2E_TEST_PLAN.md  reasoned-generative-engine.md  surge-multitimbral-setup.md  surge-xt-exploitation.md
scripts/: extract_quality_references.py  quality_bench.py  render_generative.py  render_surge_live.py  smoke_azure.py  smoke_local_llm.py  spike_generative.py
tests/: test_azure_client.py  test_beatgrid.py  test_bridge_tools.py  test_camelot.py  test_catalog_mp3.py  test_charmap_regression.py  test_critic_flags_dislikes.py  test_editor_prompt_user_signal.py  test_environment_bias.py  test_generative_arc.py  test_generative_clock.py  test_generative_controls.py  test_generative_density.py  test_generative_dispatch.py  test_generative_feel.py  test_generative_harmony.py  test_generative_interpreter.py  test_generative_lead.py  test_generative_mind.py  test_generative_patches.py  test_generative_quality.py  test_generative_render_audio.py  test_generative_scales.py  test_generative_spec.py  test_generative_state.py  test_genre_guard_catalog_aware.py  test_live_dj_audience_request.py  test_live_dj_environment_changed.py  test_live_dj_request_rejection_rate.py  test_live_engine.py  test_live_engine_browser.py  test_live_engine_crossfade_sequence.py  test_live_engine_endgame_safeguard.py  test_live_engine_endless.py  test_live_engine_protocol.py  test_live_engine_skip_crossfade.py  test_live_engine_stall.py  test_live_engine_track_ended.py  test_live_tools.py  test_memory.py  (+10 more)
tests/web/: conftest.py  test_app_brief.py  test_app_editor_endpoints.py  test_app_editor_sse.py  test_app_notes.py  test_auth_query_token.py  test_brief_parser.py  test_chat_greetings.py  test_live_runtime.py  test_live_ws.py  test_live_ws_youtube.py  test_oauth_tokens_store.py  test_perception_buffer.py  test_phase_critique_user_context.py  test_phase_editor_user_context.py  test_phase_genre_guard_environment.py  test_phase_plan_user_context.py  test_pipeline_v260.py  test_render_helpers.py  test_session_store.py  test_user_context.py  test_ws_manager.py  test_ws_session.py  test_youtube_auth.py  test_youtube_chat.py  test_youtube_runtime.py
tracks/: tracks.json.example
tracks/session 2/: session.json
tracks/session 3 v2/: session.json
web/backend/: app.py  arc.py  auth.py  brief_parser.py  chat_names.py  db.py  models.py  (+10 more)
(+166 files in other folders)
