[project]
name = "deep-session-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "pydub>=0.25.1",
    "pyrubberband>=0.4.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.13.1",
]
