[project]
name = "apollo-agents"
version = "3.0.0"
description = "AI-powered DJ set builder — multi-agent pipeline from tracks to YouTube video"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "pydub>=0.25.1",
    "pyrubberband>=0.4.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.13.1",
    "sounddevice>=0.5.0",
    "pyrekordbox>=0.4.0",
    "pyloudnorm>=0.2.0",
    "pedalboard>=0.9.22",
]

[project.optional-dependencies]
# v3.0 precision beat-matching. Adds madmom (RNN downbeat tracker) for
# offline analysis at --build-catalog time. PyPI's madmom 0.16.1 pins
# numpy<2 which conflicts with this project; installing from the
# upstream master branch removes that cap.
#
#   uv sync --extra beatgrid
beatgrid = [
    "madmom @ git+https://github.com/CPJKU/madmom@main",
    "cython>=3",
]

[dependency-groups]
# Reasoned generative MIDI engine (docs/reasoned-generative-engine.md).
# Optional like beatgrid — the core pipeline never imports these.
#
#   uv sync --group synth
synth = [
    "mido>=1.3.0",
    "python-rtmidi>=1.5.8",
    # WASAPI loopback capture for scripts/render_surge_live.py (#68 plan B)
    "soundcard>=0.4.5",
]
dev = [
    "markdown>=3.10.2",
    "pytest>=9.0.3",
    "weasyprint>=68.1",
]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "cryptography>=42.0.0",
]
youtube = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[tool.uv]
# `uv run` syncs default groups only — anything not listed here gets
# UNINSTALLED by a plain `uv run`, which kept breaking either the
# generative scripts (synth) or the web test suite (web) depending on
# who synced last. This project's local dev = all three.
default-groups = ["dev", "synth", "web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
